--- a/todo.txt
+++ b/todo.txt
@@ -9,5 +9,9 @@ Todo:
 - loading page
 
 short term todo:
-- add clienty side functionality to all containers
+
 - perhaps make the buttons their own component?
+
+
+style
+- hide index on hover
