--- a/todo.txt
+++ b/todo.txt
@@ -5,13 +5,13 @@ Todo:
 - footer
 - loading page
 
-short term todo:
-- perhaps make the buttons their own component?
-
 style
 - responsive design
 - hide index on hover
 - background
 - add tailwind scrollbar plugin
+
+next 
+- new releaeses sort !
 
 to logout compeltely, the user can be redirected to  https://www.spotify.com/en/logout
