--- a/todo.txt
+++ b/todo.txt
@@ -9,10 +9,10 @@ Todo:
   - check top artists every day
   - check recently played every refresh
   - check new releases every day
-- key error in recently played list
 
 style
-- responsive design in recently played container, specifically the height
+- mobile version login page
+- fix iPad pro
 
 to logout compeltely, the user can be redirected to  https://www.spotify.com/en/logout
 
